[package]
name = "character-sheet"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "character-sheet"
path = "src/main.rs"